unpackaged/main/default/objects/IndividualApplication/fields/Additional_Security_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Security_Info__c</fullName>
    <description>Security information specific to a request, such as passwords for protected attachments.</description>
    <inlineHelpText>Security information specific to a request, such as passwords for protected attachments.</inlineHelpText>
    <label>Additional Security Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>