unpackaged/main/default/objects/IndividualApplication/fields/Address_COVID_response__c.field-meta.xml
<CustomField>
    <fullName>Address_COVID_response__c</fullName>
    <description>Determine if grant addresses COVID response and, if so, if it is within and/or outside of COVID strategy.</description>
    <inlineHelpText>Response required for all grants. Choose within strategy for any COVID fund grants, choose outside strategy for any COVID-response grants funded through other means.</inlineHelpText>
    <label>Does this grant address COVID response?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, through COVID strategy</fullName>
            </value>
            <value>
                <fullName>Yes, outside of COVID strategy</fullName>
            </value>
            <value>
                <fullName>Yes, through COVID strategy AND outside of COVID strategy</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>