unpackaged/main/default/objects/IndividualApplication/fields/Address_of_Fiscal_Agent__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Fiscal_Agent__c</fullName>
    <description>Address of request&#39;s fiscal sponsor</description>
    <inlineHelpText>Address of request&#39;s fiscal sponsor</inlineHelpText>
    <label>Address of Fiscal Agent</label>
    <type>TextArea</type>
</CustomField>