unpackaged/main/default/objects/IndividualApplication/fields/Age_Focus__c.field-meta.xml
<CustomField>
    <fullName>Age_Focus__c</fullName>
    <inlineHelpText>Select up to 4 codes that best describes the age groups of the end beneficiaries of the grant.</inlineHelpText>
    <label>Grant Age Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Infants &amp; Children to 9</fullName>
            </value>
            <value>
                <fullName>Adolescents 10 to 19</fullName>
            </value>
            <value>
                <fullName>Young Adults Under 35</fullName>
            </value>
            <value>
                <fullName>Adults Over 35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>