unpackaged/main/default/objects/IndividualApplication/fields/AJWS_Grantees_Supported_By_Grant__c.field-meta.xml
<CustomField>
    <fullName>AJWS_Grantees_Supported_By_Grant__c</fullName>
    <inlineHelpText>If you selected &quot;Capacity Building for Other Orgs&quot; for grant methodology, please list any AJWS grantees receiving capacity building support through this grant. Please do so by typing grantee AKAs separated by a comma (,)</inlineHelpText>
    <label>AJWS Grantees Supported By Grant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>