unpackaged/main/default/objects/IndividualApplication/fields/AKA__c.field-meta.xml
<CustomField>
    <fullName>AKA__c</fullName>
    <description>This is a formula field that looks to the Organization/Grantee (Account object) AKA.</description>
    <formula>Account.AKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field that looks to the Organization/Grantee (Account object) AKA.</inlineHelpText>
    <label>AKA</label>
    <type>Text</type>
</CustomField>