unpackaged/main/default/objects/IndividualApplication/fields/Capacity_Activities__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Activities__c</fullName>
    <description>E2 on the Project proposal</description>
    <inlineHelpText>List the specific activities you will do to support your capacity building needs.</inlineHelpText>
    <label>Capacity Activities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>