unpackaged/main/default/objects/IndividualApplication/fields/Capacity_Need__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Need__c</fullName>
    <description>E1 on Project proposal</description>
    <inlineHelpText>List the organizational capacities that you will develop with this grant and why they are needed. Describe how focusing on these areas will build on prior capacity building activities.</inlineHelpText>
    <label>Capacity Need</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>