unpackaged/main/default/objects/IndividualApplication/fields/Capacity_Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Sustainability__c</fullName>
    <description>E3 on Project proposal</description>
    <inlineHelpText>What steps will you take to ensure that the positive results of these capacity building activities will be sustained by your organization? (1 to 2 paragraphs)</inlineHelpText>
    <label>Capacity Sustainability</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>