unpackaged/main/default/objects/IndividualApplication/fields/Capacity_to_be_Developed__c.field-meta.xml
<CustomField>
    <fullName>Capacity_to_be_Developed__c</fullName>
    <inlineHelpText>Select all relevant codes from this category when all or part of a grant will be used to build the capacity of the organization receiving the grant.</inlineHelpText>
    <label>Capacity to be Developed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Mission/Org Strategy</fullName>
            </value>
            <value>
                <fullName>Monitoring &amp; Evaluation</fullName>
            </value>
            <value>
                <fullName>Organizational Operations</fullName>
            </value>
            <value>
                <fullName>Physical Infrastructure</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Program - Advocacy</fullName>
            </value>
            <value>
                <fullName>Program - Gender</fullName>
            </value>
            <value>
                <fullName>Program - Legal</fullName>
            </value>
            <value>
                <fullName>Program - Movement Building</fullName>
            </value>
            <value>
                <fullName>Program - Research &amp; Documentation</fullName>
            </value>
            <value>
                <fullName>Safety, Security &amp; Risk Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>