unpackaged/main/default/objects/IndividualApplication/fields/Capital_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure__c</fullName>
    <inlineHelpText>Used for DAF requests/grants</inlineHelpText>
    <label>Capital Expenditure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>