unpackaged/main/default/objects/IndividualApplication/fields/Challenges_How_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Challenges_How_to_Address__c</fullName>
    <inlineHelpText>What challenges do you anticipate and how do you plan to address these challenges?</inlineHelpText>
    <label>Challenges &amp; How to Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>