unpackaged/main/default/objects/IndividualApplication/fields/Community_Description__c.field-meta.xml
<CustomField>
    <fullName>Community_Description__c</fullName>
    <inlineHelpText>Enter Community Description</inlineHelpText>
    <label>Community Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>