unpackaged/main/default/objects/IndividualApplication/fields/Compliance_Audited_Financials_Expln__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Audited_Financials_Expln__c</fullName>
    <inlineHelpText>If organization does not have an audited financial statement, explain why.</inlineHelpText>
    <label>Audited Financials Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>