unpackaged/main/default/objects/IndividualApplication/fields/Compliance_Audited_Financials_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Audited_Financials_Flag__c</fullName>
    <inlineHelpText>Does your organization have an audited financial statement that details revenues and expenses during the last fiscal year?</inlineHelpText>
    <label>Audited Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>