unpackaged/main/default/objects/IndividualApplication/fields/Compliance_Not_Registered_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Not_Registered_Explanation__c</fullName>
    <inlineHelpText>If organization is not registered, explain why.</inlineHelpText>
    <label>Not Registered Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>