unpackaged/main/default/objects/IndividualApplication/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <description>intended for internal use</description>
    <inlineHelpText>intended for internal use</inlineHelpText>
    <label>Compliance Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>