unpackaged/main/default/objects/IndividualApplication/fields/Compliance_Registration_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Registration_Flag__c</fullName>
    <inlineHelpText>Does your organization have a registration certificate?</inlineHelpText>
    <label>Is Org Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>