unpackaged/main/default/objects/IndividualApplication/fields/Connect_or_Build_on_Previous_Work__c.field-meta.xml
<CustomField>
    <fullName>Connect_or_Build_on_Previous_Work__c</fullName>
    <description>D2 on Project proposal</description>
    <inlineHelpText>For existing grantees only. How does this request connect with or build on previous work supported with AJWS funding? (1 to 2 paragraphs)</inlineHelpText>
    <label>Connect or Build on Previous Work</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>