unpackaged/main/default/objects/IndividualApplication/fields/DAF_ID__c.field-meta.xml
<CustomField>
    <fullName>DAF_ID__c</fullName>
    <description>DAF ID for DAF grants/requests</description>
    <inlineHelpText>DAF ID for DAF grants/requests</inlineHelpText>
    <label>DAF ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>