unpackaged/main/default/objects/IndividualApplication/fields/DAF_Program_Officer__c.field-meta.xml
<CustomField>
    <fullName>DAF_Program_Officer__c</fullName>
    <inlineHelpText>Enter DAF Program Officer</inlineHelpText>
    <label>DAF Program Officer</label>
    <type>TextArea</type>
</CustomField>