unpackaged/main/default/objects/IndividualApplication/fields/Declination_Note__c.field-meta.xml
<CustomField>
    <fullName>Declination_Note__c</fullName>
    <description>Please Enter Declination Note.</description>
    <inlineHelpText>Please Enter Declination Note.</inlineHelpText>
    <label>Declination Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>