unpackaged/main/default/objects/IndividualApplication/fields/Declination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declination_Reason__c</fullName>
    <description>Please Enter a Declination Reason.</description>
    <inlineHelpText>Please Enter a Declination Reason.</inlineHelpText>
    <label>Declination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined After Staff Visit</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Includes Proselytizing Activities</fullName>
            </value>
            <value>
                <fullName>Limited Resources</fullName>
            </value>
            <value>
                <fullName>No Funding to Individuals</fullName>
            </value>
            <value>
                <fullName>Not AJWS Country</fullName>
            </value>
            <value>
                <fullName>Not NGO</fullName>
            </value>
            <value>
                <fullName>Outside of Guidelines</fullName>
            </value>
            <value>
                <fullName>Outside Operating Area</fullName>
            </value>
            <value>
                <fullName>Red Flags</fullName>
            </value>
            <value>
                <fullName>Withdrawn by AJWS</fullName>
            </value>
            <value>
                <fullName>Withdrawn by Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>