unpackaged/main/default/objects/IndividualApplication/fields/Description_Long__c.field-meta.xml
<CustomField>
    <fullName>Description_Long__c</fullName>
    <inlineHelpText>Grant Description for the docket.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>