unpackaged/main/default/objects/IndividualApplication/fields/DNP_Notes__c.field-meta.xml
<CustomField>
    <fullName>DNP_Notes__c</fullName>
    <description>Do Not Publish (DNP) instructions for Communications and others</description>
    <inlineHelpText>Do Not Publish (DNP) instructions for Communications and others.</inlineHelpText>
    <label>DNP Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>