unpackaged/main/default/objects/IndividualApplication/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docket</label>
    <referenceTo>Docket__c</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>