unpackaged/main/default/objects/IndividualApplication/fields/Does_your_org_have_a_fiscal_agent__c.field-meta.xml
<CustomField>
    <fullName>Does_your_org_have_a_fiscal_agent__c</fullName>
    <description>For grantees to indicate if they have a fiscal agent.</description>
    <inlineHelpText>Please indicate if your organization has a fiscal agent.</inlineHelpText>
    <label>Does your org have a fiscal agent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>