unpackaged/main/default/objects/IndividualApplication/fields/ED_Certified__c.field-meta.xml
<CustomField>
    <fullName>ED_Certified__c</fullName>
    <description>Shows if parent Account is ED Certified</description>
    <formula>TEXT(Account.ED_Certified__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows if parent Account is ED Certified</inlineHelpText>
    <label>ED Certified</label>
    <type>Text</type>
</CustomField>