unpackaged/main/default/objects/IndividualApplication/fields/ED_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ED_Expiration_Date__c</fullName>
    <description>ED Certification Expiration Date</description>
    <formula>Account.ED_Expires_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ED Certification Expiration Date</inlineHelpText>
    <label>ED Expiration Date</label>
    <type>Date</type>
</CustomField>