unpackaged/main/default/objects/IndividualApplication/fields/Email_for_Fiscal_Agent__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Fiscal_Agent__c</fullName>
    <description>Enter the Fiscal Agents email address.</description>
    <inlineHelpText>Enter the Fiscal Agents email address.</inlineHelpText>
    <label>Email for Fiscal Agent</label>
    <type>Email</type>
</CustomField>