unpackaged/main/default/objects/IndividualApplication/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Grant End Date (Used in calculating grant duration)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>