unpackaged/main/default/objects/IndividualApplication/fields/Expenditure_Responsibility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Responsibility_Notes__c</fullName>
    <inlineHelpText>Used for the DAF</inlineHelpText>
    <label>Expenditure Responsibility Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>