unpackaged/main/default/objects/IndividualApplication/fields/Fiscal_Agent_City__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Agent_City__c</fullName>
    <description>City for request&#39;s fiscal sponsor</description>
    <inlineHelpText>City for request&#39;s fiscal sponsor</inlineHelpText>
    <label>Fiscal Agent City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>