unpackaged/main/default/objects/IndividualApplication/fields/Fiscal_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>