unpackaged/main/default/objects/IndividualApplication/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF( YEAR(DATEVALUE(ApprovedDate)) &lt; 2014
,TEXT(YEAR(DATEVALUE(ApprovedDate)))
,IF( DATEVALUE(ApprovedDate) &gt;= DATE(2014,5,1)
,IF( MONTH(DATEVALUE(ApprovedDate)) &lt; 5
,TEXT(YEAR(DATEVALUE(ApprovedDate)))
,TEXT(YEAR(DATEVALUE(ApprovedDate)) + 1)
)
,&quot;2014&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>