unpackaged/main/default/objects/IndividualApplication/fields/Funding_Exception__c.field-meta.xml
<CustomField>
    <fullName>Funding_Exception__c</fullName>
    <description>Funding exception.</description>
    <inlineHelpText>Funding exception.</inlineHelpText>
    <label>Funding Exception</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rapid Relief</fullName>
            </value>
            <value>
                <fullName>HRD Fund</fullName>
            </value>
            <value>
                <fullName>Digicel Media Grant</fullName>
            </value>
            <value>
                <fullName>Clinton Global Initiative - EPCC</fullName>
            </value>
            <value>
                <fullName>Grant to a for-profit</fullName>
            </value>
            <value>
                <fullName>Kellogg</fullName>
            </value>
            <value>
                <fullName>President&#39;s Fund (class code 35)</fullName>
            </value>
            <value>
                <fullName>Class code 51: Nike exchange</fullName>
            </value>
            <value>
                <fullName>Class code 52: Nike subgrant</fullName>
            </value>
            <value>
                <fullName>Class code 53: Nike targeted CB</fullName>
            </value>
            <value>
                <fullName>Class code 54: Nike brain trust</fullName>
            </value>
            <value>
                <fullName>Class code 55: Nike AWID meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>