unpackaged/main/default/objects/IndividualApplication/fields/Gender_Focus__c.field-meta.xml
<CustomField>
    <fullName>Gender_Focus__c</fullName>
    <inlineHelpText>Select up to 4 codes that best describes the age groups of the end beneficiaries of the grant.</inlineHelpText>
    <label>Grant Gender Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender_Focus</valueSetName>
    </valueSet>
</CustomField>