unpackaged/main/default/objects/IndividualApplication/fields/Geographical_Area_Served__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area_Served__c</fullName>
    <inlineHelpText>Select one primary country or region served by this grant. If the grant primarily serves multiple countries in one region, select that region (e.g. Americas, Asia). If the grant primarily serves multiple regions, select Cross-Regional.</inlineHelpText>
    <label>Geographical Area Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_Codes</valueSetName>
    </valueSet>
</CustomField>