unpackaged/main/default/objects/IndividualApplication/fields/Geographical_Area_Served_Code__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area_Served_Code__c</fullName>
    <description>For reporting purposes, extracts the chart of accounts code of the Geographical Area Served selected.</description>
    <formula>MID( TEXT( Geographical_Area_Served__c ) ,FIND(&quot;(&quot;,TEXT(Geographical_Area_Served__c),1)+1,LEN(TEXT(Geographical_Area_Served__c))-FIND(&quot;(&quot;,TEXT(Geographical_Area_Served__c),1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, extracts the chart of accounts code of the Geographical Area Served selected.</inlineHelpText>
    <label>Geographical Area Served Code</label>
    <type>Text</type>
</CustomField>