unpackaged/main/default/objects/IndividualApplication/fields/Geographical_Area_Served_Description__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area_Served_Description__c</fullName>
    <description>For reporting purposes, extracts the Description of the Geographical Area Served selected.</description>
    <formula>LEFT(TEXT( Geographical_Area_Served__c ),FIND(&quot;(&quot;,TEXT( Geographical_Area_Served__c ),1)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, extracts the Description of the Geographical Area Served selected.</inlineHelpText>
    <label>Geographical Area Served Description</label>
    <type>Text</type>
</CustomField>