unpackaged/main/default/objects/IndividualApplication/fields/Geographical_Area_Served_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area_Served_Secondary__c</fullName>
    <inlineHelpText>Select additional secondary countries or regions that the grant is serving.</inlineHelpText>
    <label>Geographical Area Served - Secondary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_Codes</valueSetName>
    </valueSet>
</CustomField>