unpackaged/main/default/objects/IndividualApplication/fields/GL__c.field-meta.xml
<CustomField>
    <fullName>GL__c</fullName>
    <inlineHelpText>General Ledger code indicating the main category of grant.</inlineHelpText>
    <label>GL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Grants (51000)</fullName>
            </value>
            <value>
                <fullName>Travel Opportunity Grants (51001)</fullName>
            </value>
            <value>
                <fullName>Disaster Relief Grants (51020)</fullName>
            </value>
            <value>
                <fullName>DAF (51030)</fullName>
            </value>
            <value>
                <fullName>DAF ED (51031)</fullName>
            </value>
            <value>
                <fullName>Program-Related Expenses PREs (51010)</fullName>
            </value>
            <value>
                <fullName>Fund held on behalf of other (25100))</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>