unpackaged/main/default/objects/IndividualApplication/fields/Grant_Alert_Text__c.field-meta.xml
<CustomField>
    <fullName>Grant_Alert_Text__c</fullName>
    <description>Text for grant specific alerts.</description>
    <inlineHelpText>Grant specific alerts for GM or PD staff, such as outstanding items, restricted funding, etc.</inlineHelpText>
    <label>Grant Alert Text</label>
    <type>TextArea</type>
</CustomField>