unpackaged/main/default/objects/IndividualApplication/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <description>Grant Amount</description>
    <inlineHelpText>Grant Amount</inlineHelpText>
    <label>Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>