unpackaged/main/default/objects/IndividualApplication/fields/Grant_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Grant_Beneficiary__c</fullName>
    <inlineHelpText>Selection up to 4 codes that identify end beneficiaries of the grant. If they are marginalized or targeted based on gender/sex or age, please select &quot;See Gender/Age Codes.&quot;</inlineHelpText>
    <label>Grant Beneficiary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Beneficiary</valueSetName>
    </valueSet>
</CustomField>