unpackaged/main/default/objects/IndividualApplication/fields/Grant_Content_Primary__c.field-meta.xml
<CustomField>
    <fullName>Grant_Content_Primary__c</fullName>
    <inlineHelpText>Please select one primary subject of this grant.</inlineHelpText>
    <label>Grant Content - Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Content</valueSetName>
    </valueSet>
</CustomField>