unpackaged/main/default/objects/IndividualApplication/fields/Grant_Content_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Grant_Content_Secondary__c</fullName>
    <inlineHelpText>Please select up to three secondary codes, only if needed.</inlineHelpText>
    <label>Grant Content - Secondary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Content</valueSetName>
    </valueSet>
</CustomField>