unpackaged/main/default/objects/IndividualApplication/fields/Grant_Context__c.field-meta.xml
<CustomField>
    <fullName>Grant_Context__c</fullName>
    <inlineHelpText>Select codes as needed to better define the grant work. The Context code is used in conjunction with the Content code to describe what the content of the grant pertains to / is focused on. Select N/A if not applicable.</inlineHelpText>
    <label>Grant Context</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Context</valueSetName>
    </valueSet>
</CustomField>